# xiaozu-bot

./: .gitignore  LICENSE.md  README.md  bot.py  imageinfo.css  pyproject.toml
xiaozu_bot/: bot_config.py
xiaozu_bot/plugins/ai/: __init__.py
xiaozu_bot/plugins/devil_bet/: test.py
xiaozu_bot/plugins/game/: __init__.py
xiaozu_bot/plugins/gdlevelsearch/: __init__.py  aredlapi.py  draw.py  format_message.py  gdapi.py  gddlapi.py  imageinfo.py  nlwapi.py  platapi.py
xiaozu_bot/plugins/gdlevelsearch/data/: aredl_levels.json  arepl_levels.json  hds_levels.json  ids_levels.json  lw_levels.json  nlw_levels.json
xiaozu_bot/plugins/guess/: __init__.py  data.py
xiaozu_bot/plugins/joy/: __init__.py
xiaozu_bot/plugins/jrrp/: __init__.py
xiaozu_bot/plugins/roulette/: __init__.py  const.py  data.py
xiaozu_bot/plugins/say/: __init__.py
xiaozu_bot/plugins/ultra/: __init__.py
xiaozu_bot/plugins/xiaozubot_help/: __init__.py
xiaozu_bot/plugins/zhua/: __init__.py
xiaozu_bot/plugins/zhua/data/: storage.json
xiaozu_bot/plugins/zhua_api/: __init__.py  messages.py
xiaozu_bot/utils/: json_storage.py
